--- a/app/src/main/res/navigation/home_activity_nav.xml
+++ b/app/src/main/res/navigation/home_activity_nav.xml
@@ -85,10 +85,24 @@
     </fragment>
     <fragment
         android:id="@+id/favMealDetailsFragment"
-        android:name="com.example.androidproject.FavMealDetailsFragment"
+        android:name="com.example.androidproject.view.favorites.FavMealDetailsFragment"
         android:label="FavMealDetailsFragment" >
         <argument
             android:name="MealDetails"
             app:argType="com.example.androidproject.model.mealsModel.Meal" />
     </fragment>
+    <fragment
+        android:id="@+id/loginFragment2"
+        android:name="com.example.androidproject.view.login_sign.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment2_to_signUpFragment2"
+            app:destination="@id/signUpFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpFragment2"
+        android:name="com.example.androidproject.view.login_sign.SignUpFragment"
+        android:label="fragment_sign_up"
+        tools:layout="@layout/fragment_sign_up" />
 </navigation>
