--- a/app/src/main/res/layout/fragment_country.xml
+++ b/app/src/main/res/layout/fragment_country.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.country_card.CountryFragment">
+    tools:context=".view.country_card.CountryFragment"
+
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/countryCard"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,6 +18,8 @@
         android:layout_margin="10dp"
         app:cardCornerRadius="20dp"
         android:clickable="true"
+
+
 
         >
 
@@ -26,8 +30,10 @@
             android:background="#D0BCE2A3"
             android:padding="5dp"
             android:text="Country Name"
-            android:textSize="35dp"
-            android:textColor="@color/green"/>
+            android:textSize="25dp"
+            android:textColor="@color/green"
+            android:textAlignment="center"
+            />
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
